packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/valid/device_libraries/test_device_nested.mmd
---
device: Test Device Nested
manufacturer: Test Manufacturer
version: 1.0.0
---

# Test Device Nested - Imports another device library

@import "test_device_a.mmd"

@alias nested_command {ch} "Command that uses imported aliases"
  - cc {ch}.10.100
@end
