packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/invalid/imports/circular_b.mmd
---
device: Circular B
---

# Circular import: B imports A
@import "circular_a.mmd"

@alias cmd_b {ch} "Command B"
  - cc {ch}.2.0
@end
